# null-vm

./: Cargo.toml  Makefile  README.md
.github/actions/setup-rust/: action.yaml
.github/scripts/: public_loc.sh  publish_loc.sh
.github/workflows/: daily_loc_report.yaml  pr_main.yaml
docs/: SUMMARY.md  general_flow.md  other_resources.md  roadmap.md
docs/cryptography/: proof_system.md
docs/virtual_machine/: introduction.md
null-vm/: .gitignore  Makefile
null-vm/programs/asm/: add_min.s  addi_max.s  andi.s  andi_one_and_two.s
null-vm/src/: main.rs
null-vm/tests/: asm.rs
programs/rust/basic_rust/: Cargo.toml
prover/: Cargo.toml
prover/src/: lib.rs
prover/src/air/: constraints_templates.rs  cpu_air.rs  mod.rs
prover/src/tests/: cpu_table.rs  mod.rs
riscv-prover/: Cargo.toml
riscv-prover/src/air/: constraints_templates.rs  cpu_table_builder.rs  mod.rs
riscv-prover/src/tests/: cpu_table.rs
src/: elf.rs  lib.rs  main.rs
src/vm/: execution.rs  instructions.rs  mod.rs
tests/: asm.rs  rust.rs
tooling/: Cargo.toml
tooling/loc/: Cargo.toml  Makefile
tooling/loc/src/: main.rs  report.rs
vm/: .gitignore  Cargo.toml  Makefile
vm/program_artifacts/asm/: add.elf  add_max.elf  add_max_plus_one.elf  add_min.elf  add_min_minus_one.elf  add_neg.elf  addi_255.elf  addi_max.elf  addi_min.elf  addi_minus_one.elf  addi_one.elf  addi_reg.elf  addi_reg_max.elf  addi_reg_min.elf  andi.elf  andi_max.elf  andi_one.elf  andi_one_and_two.elf  andi_one_and_zero.elf  auipc.elf  auipc_offset.elf  bne.elf  (+59 more)
vm/src/: main.rs
vm/tests/: asm.rs  rust.rs
(+97 files in other folders)
