# Acknowledgement: Lambdaclass Ethrex Team (https://github.com/lambdaclass/ethrex)
[workspace]
resolver = "3"
members = ["loc"]

[workspace.package]
version = "4.0.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.3", features = ["derive", "env"] }
clap_complete = "4.5.17"
