# Acknowledgement: Lambdaclass Ethrex Team (https://github.com/lambdaclass/ethrex)
[package]
name = "loc"
version.workspace = true
edition.workspace = true

[dependencies]
tokei = "12.1.2"
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored = "2.1.0"
spinoff = "0.8.0"
prettytable = "0.10.0"
